fixed featured layout issues of overlay positioning on featured banner, featured-stats placement adjusted and styles edited for smaller viewports

--- a/app/scss/3-basics/_base.sass
+++ b/app/scss/3-basics/_base.sass
@@ -9,7 +9,8 @@ html
   box-sizing: inherit
 
 body
-	background-color: $black
+	background-color: darken($twitch_purple, 32%)
+  background: url('../images/slice1.png') repeat
   display: flex
   min-height: 100vh
   flex-direction: column
