--- a/app/scss/3-basics/_cols.sass
+++ b/app/scss/3-basics/_cols.sass
@@ -1,11 +1,11 @@
 .wrapper
-	width: 100%
+	width: 97%
 	max-width: 1200px
 	margin: 0 auto
 
-.wrapper--header
-	width: 97%
-
+.wrapper--featured__stats
+	width: 100%
+	
 .row
   display: flex
   flex-flow: row wrap
@@ -21,6 +21,9 @@
 	  margin: 0 0 0 4%
 
 @media only screen and (min-width: 750px)
+	.wrapper
+		width: 100%
+
 	.col-order-first
 		order: -1
 
