--- a/app/scss/4-layout/_featured-stream.sass
+++ b/app/scss/4-layout/_featured-stream.sass
@@ -30,10 +30,9 @@
   right: 0
   bottom: 0
   display: flex
-  transform: translateX(-600px)
+  transform: translateX(-800px)
   justify-content: center
   align-items: center
-  max-height: 330px
   background: rgba($twitch_purple, .5)
   transition: transform .5s ease-in
 
