--- a/app/scss/4-layout/_nav.sass
+++ b/app/scss/4-layout/_nav.sass
@@ -16,3 +16,21 @@
 
 .nav-item__icon
   width: 35px
+
+.nav-item__link--crown
+  position: relative
+
+.live__count
+  position: absolute
+  background-color: rgba(crimson, .7)
+  padding: 4px 6px
+  top: -4px
+  left: -12px
+  font-size: .5rem
+
+.nav-item__link--user
+  display: none
+
+@media only screen and (min-width: 480px)
+  .nav-item__link--user
+    display: block
